--- a/PII-Data-RAG-Pipeline.ipynb
+++ b/PII-Data-RAG-Pipeline.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -3783,16 +3782,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kylekapoor/Robo-Advisor/blob/main/PII_Data_RAG_Pipeline.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# Install libraries"
       ],
@@ -3804,7 +3793,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": true,
         "id": "r5K71LmLS7ze",
         "outputId": "b6bfb6f0-e984-45e6-e5e5-9629a7dc6fdc",
         "colab": {
